2091.	[bug]		marcin
	Fixed a bug that caused a response to a config-get command
	to lack the configured read-timeout, write-timeout, and
	tcp-user-timeout parameters.
	(Gitlab #2741)

2090.	[build]		andrei
	Fixed the --with-site-packages configure flag which had no effect
	previously.
	(Gitlab #2669)

Kea 2.3.4 (development) released on January 25, 2022

2089.	[build]		razvan
	The library version numbers have been bumped for the Kea 2.3.4
	development release.
	(Gitlab #2726)

2088.	[func]*		tomek
	The libreload command is now deprecated. The code is still there,
	but it will be removed in the future versions.
	(Gitlab #2693)

2087.	[func]		razvan
	The Kea DHCPv4 server can now handle multiple vendor options
	with different enterprise IDs and multiple vivso-suboptions.
	(Gitlab #1518)

2086.	[bug]		andrei
	A spacing issue in a prepared statement that prevented Config
	Backend from working with PostgreSQL 15 and above has been fixed.
	(Gitlab #2724)

2085.	[func]		tmark
	kea-dhcp-ddns uses new log messages to clearly distinguish
	between timeouts and other IO errors when communicating with
	DNS servers.
	(Gitlab #2589)

2084.	[func]		razvan
	When the client adds a prefix length in the hint, the server
	will try to select a pool with the delegated prefix length
	equal to the respective value. If no pool is found, the server
	will try to select a pool with a lower delegated prefix length
	(a larger address space) and if none is found, it will try to
	select a pool with a higher delegated prefix length (a smaller
	address space).
	(Gitlab #1958)

2083.	[func]		marcin
	New database connection parameters, "read-timeout" and
	"write-timeout", control the timeouts in communication with the
	MySQL database. The "tcp-user-timeout" controls the timeout in
	communication with the PostgreSQL database. Setting these
	timeouts can prevent occasional Kea hangs due to issues with
	the database connectivity.
	(Gitlab #2688)

2082.	[bug]		razvan